src/app/pages/home/components/console/console.component.scss
:host {
    margin: 50px 0;
    display: block;

    .bar {
        background-color: rgb(233, 233, 233);
        display: flex;
        padding: 5px;
        border-radius: 8px 8px 0 0;

        .dot {
            width: 15px;
            height: 15px;
            border-radius: 50%;
            cursor: pointer;

            &:not(:first-child) {
                margin-left: 5px;
            }
        }

        .red {
            background-color: red;
        }

        .orange {
            background-color: orange;
        }

        .green {
            background-color: green;
        }
    }

    .console {
        height: 25vh;
        background-color: black;
        width: 100%;
        color: white;
        border-radius: 0 0 8px 8px;
        overflow-y: auto;
        scroll-behavior: smooth;
        cursor: text;
        box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;


        .user-input {
            display: flex;
            align-items: center;
            
            .input-label {
                display: none;
            }

            input {
                position: absolute;
                background: none;
                cursor: default;
                border: none;
                resize: none;
                opacity: 0;

                &:focus {
                    outline: none;
                }
            }

            .display-text {
                margin-left: 5px;
            }

            @keyframes caret-flash {
                from { opacity: 1; }
                to { opacity: 0.1; }
            }

            .caret {
                width: 10px;
                height: 18px;
                background-color: #fff;
                animation: 0.6s alternate infinite caret-flash;
            }
        }

    }
}

